took out margins--need to fix text alignment with respect to radio buttons

--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,6 @@ padding:5px;
 
 #footer input {
 margin:10px 10px 2px 2px;
-padding:0 0 0 2px;
 }
 /*** Footer End ***/
 
